Fix cursor stuck for headers on arrow keys nav in plain editor

--- a/src/client/components/PlainMarkdownEditor/PlainMarkdownEditor.less
+++ b/src/client/components/PlainMarkdownEditor/PlainMarkdownEditor.less
@@ -1,6 +1,6 @@
 .oc-md-hl-header(@offset) {
   font-weight: bold;
-  display: inline-flex;
+  display: inline;
   margin-left: -(@offset + 1ch);
   padding-right: (@offset + 1ch);
 }
@@ -20,7 +20,7 @@
 
 .oc-md-hl-header-no-offset {
   font-weight: bold;
-  display: inline-flex;
+  display: inline;
 }
 
 .oc-md-hl-code {
@@ -40,7 +40,7 @@
 }
 
 .oc-md-hl-list-with-offset(@offset) {
-  display: inline-flex;
+  display: inline;
   margin-left: -(@offset);
   padding-right: (@offset);
 }
@@ -66,7 +66,7 @@
 }
 
 .oc-md-hl-blockquote {
-  display: inline-block;
+  display: inline;
 }
 
 .oc-md-hl-list {
